[package]
name = "mkv"
version = "0.22.0"
authors = ["Mike McDermott "]
license = "MIT"
keywords = ["key-value-store", "database", "sled"]
repository = "https://github.com/xkortex/kv"
documentation = "https://docs.rs/kv"
description = "An embedded key/value store for Rust"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
kv = "0.22"
sled = "0.34"
thiserror = "1"
toml = "0.5"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", optional = true}
rmp-serde = {version = "0.14", optional = true}
bincode = {version = "1.3", optional = true}
serde-lexpr = {version = "0.1", optional = true}
clap = "2"
walkdir = "1"
time = "0.1"
termion = "1.5"
error-chain = "0.12"

[features]
default = []
json-value = ["serde_json"]
msgpack-value = ["rmp-serde"]
bincode-value = ["bincode"]
lexpr-value = ["serde-lexpr"]

[[bin]]
name = "kv"
path = "src/main.rs"